--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     }
 
     .footer-div {
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(255, 255, 255, 0.5);
         padding: 20px;
         border-radius: 6px;
         text-align: center;
@@ -227,6 +227,12 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
+    }
+    /* 卡片标头 */
+    .card-content{
+        font-family: wenkai;
+        font-size: 35px;
+        margin: left;
     }
 </style>
 
@@ -276,6 +282,7 @@
             <h1 class="font-wenkai" style="color: white;" id="title">萌新源的个人主页</h1>
         </div>
         <div class="card animated lightSpeedIn" id="list-card">
+            <div class="card-content">我的小世界<span class="iconfont icon-WORLD" style="font-size: 50px;"></span></div>
             <a href="https://github.com/mengxinyuan638" target="_blank">
                 <div class="link-card">
                     <span class="iconfont icon-GitHub" style="font-size: 70px;"></span>
@@ -294,7 +301,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://api.juncikeji.xyz/" target="_blank">
+            <a href="https://api.mxycn.cn/" target="_blank">
                 <div class="link-card">
                     <span class="iconfont icon-APIjiekou" style="font-size: 70px;"></span>
                     <div class="link-msg">
@@ -303,7 +310,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://blog.juncikeji.xyz/" target="_blank">
+            <a href="https://blog.mxycn.cn/" target="_blank">
                 <div class="link-card">
                     <span class="iconfont icon-blog" style="font-size: 70px;"></span>
                     <div class="link-msg">
